# Colvillea

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFreeImage.cmake  FindMDL.cmake
docs/: design.md  doxyfile  history.md  structures.md
ext/: CMakeLists.txt
include/colvillea/delegate/: denoiser.h  imageutil.h  meshimporter.h
include/colvillea/libkernel/base/: bsdf.h  config.h  emitter.h  entity.h  frame.h  material.h  math.h  microfacet.h  owldefs.h  ray.h  sampler.h  samplingrecord.h  soa.h  texture.h  warp.h  workqueue.h
include/colvillea/libkernel/bsdfs/: roughconductor.h  roughdielectric.h  smoothdiffuse.h
include/colvillea/libkernel/emitters/: directional.h  hdridome.h
include/colvillea/libkernel/integrators/: raygeneration.cuh
include/colvillea/libkernel/materials/: diffusemtl.h  glass.h  metal.h
include/colvillea/libkernel/shapes/: trimesh.h
include/colvillea/libkernel/textures/: imagetex2d.h
include/colvillea/librender/: asdataset.h  device.h  entity.h  integrator.h  mdlcompiler.h  renderengine.h  scene.h
include/colvillea/librender/nodebase/: camera.h  emitter.h  material.h  node.h  shape.h  texture.h
include/colvillea/nodes/emitters/: directional.h  hdridome.h
include/colvillea/nodes/materials/: diffusemtl.h  glass.h  metal.h
include/colvillea/nodes/shapes/: trianglemesh.h
include/colvillea/nodes/textures/: imagetex2d.h
src/colvillea/: CLViewer.cpp  CLViewer.h  CMakeLists.txt  Camera.cpp  Camera.h  FlyMode.cpp  FlyMode.h  InspectMode.cpp  InspectMode.h  colvillea.cpp
src/core/: CMakeLists.txt
src/core/devices/: cudabuffer.cpp  cudabuffer.h  cudacommon.h  cudadevice.cpp  cudadevice.h  deviceCode.h  optix.cu  optixdevice.cpp  optixdevice.h
src/core/integrators/: direct.cpp  direct.h  path.cpp  path.h
src/core/librender/: device.cpp  integrator.cpp  mdlcompiler.cpp  renderengine.cpp  scene.cpp
src/core/librender/nodebase/: emitter.cpp  material.cpp  shape.cpp  texture.cpp
src/core/nodes/emitters/: hdridome.cpp
src/core/nodes/materials/: diffusemtl.cpp
src/core/nodes/textures/: imagetex2d.cpp
src/delegate/: CMakeLists.txt  imageutil.cpp  meshimporter.cpp
src/kernel/: CMakeLists.txt
src/kernel/emitters/: hdridome.cu
src/kernel/integrators/: raygeneration.cu
src/kernel/textures/: imagetex2d.cpp
tests/: CMakeLists.txt  test.cpp
tests/main/: CMakeLists.txt  gtest-main.cpp
